--- a/app/index.html
+++ b/app/index.html
@@ -67,23 +67,15 @@
 
 <div id="contacto">
 
-    <h1>Contacto</h1>
 
-    <div id="contacto-container">
 
-        <div>
-            <input type="text" id="nombre">
-            <input type="text" id="apellido">
-            <input type="text" id="mail">
-            <button id="contacto-enviar-desktop">Enviar</button>
-        </div>
-        <div>
-            <textarea name="" id="consulta" rows="10"></textarea>
-        </div>
-        <div>
-            <button id="contacto-enviar-mobile">Enviar</button>
-        </div>
-    </div>
+    <h1>Telefonos</h1><br>
+    <h2>Administración: Tel.: 0221 423 - 4505</h2><br>
+    <h2>Depto. de Desarrollo Productivo: Tel.: 0221 422 - 3916</h2><br>
+
+    <h1>Nuestros correos electrónicos son</h1><br>
+    <h2>uiglp@uiglp.org.ar</h2><br>
+    <h2>administracion@uiglp.org.ar</h2><br>
 
 
 </div>
@@ -129,5 +121,6 @@
 <script src="busquedas_laborales/busquedas_laborales.js"></script>
 <script src="servicios/servicios.js"></script>
 <script src="revistas/revistas.js"></script>
+<script src="contacto/contacto.js"></script>
 </body>
 </html>
