--- a/app/contacto/contacto.html
+++ b/app/contacto/contacto.html
@@ -1,18 +1,20 @@
 <div ng-controller="ContactoController as contactoCtrl" id="contacto-inner">
     <div id="contacto-titulo" class="contacto-title">
-        Contacto
+        Contacto:
     </div>
-    <h1>Contacto</h1>
-
     <div id="contacto-container">
 
         <div>
+            Nombre:
             <input ng-model="contactoCtrl.nombre" type="text" id="nombre">
+            Email:
             <input ng-model="contactoCtrl.email"  type="text" id="mail">
+            Asunto:
             <input ng-model="contactoCtrl.asunto"  type="text" id="asunto">
             <button id="contacto-enviar-desktop" ng-click="contactoCtrl.sendMail();">Enviar</button>
         </div>
         <div>
+            Escriba Aqui su consulta:
             <textarea ng-model="contactoCtrl.mensaje" name="" id="consulta" rows="10"></textarea>
         </div>
         <div>
