--- a/app/ingreso/ingreso.html
+++ b/app/ingreso/ingreso.html
@@ -1,6 +1,6 @@
 <div ng-controller="IngresoController as ingresoCtrl" id="ingreso">
     <div id="ingreso-titulo" class="administracion-title">
-        INGRESO
+        Ingreso:
     </div>
 
     <div id="ingreso-form">
