--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
 
 
 
-    <h1>Telefonos</h1><br>
+    <h1>Teléfonos</h1><br>
     <h2>Administración: Tel.: 0221 423 - 4505</h2><br>
     <h2>Depto. de Desarrollo Productivo: Tel.: 0221 422 - 3916</h2><br>
 
