--- a/app/contacto/contacto.html
+++ b/app/contacto/contacto.html
@@ -1,6 +1,6 @@
 <div ng-controller="ContactoController as contactoCtrl" id="contacto-inner">
     <div id="contacto-titulo" class="contacto-title">
-        Contacto:
+        <div>Contacto</div>
     </div>
     <div id="contacto-container">
 
