--- a/app/revistas/revistas.html
+++ b/app/revistas/revistas.html
@@ -1,6 +1,6 @@
 <div ng-controller="RevistasController as revistasCtrl" id="revistas">
     <div id="revistas-titulo" class="revistas-title">
-        Revistas: {{revistasCtrl.usuario.nombre}}
+        <div>Revistas</div>
     </div>
 
     <div id="revistas-listado">
