--- a/app/servicios/servicios.html
+++ b/app/servicios/servicios.html
@@ -1,6 +1,6 @@
 <div ng-controller="ServiciosController as serviciosCtrl" id="servicios-inner">
     <div id="servicios-titulo" class="servicios-title">
-        Servicios
+        <div>Servicios</div>
     </div>
 
     <div id="servicios-main-container">
