--- a/app/busquedas_laborales/busquedas_laborales.html
+++ b/app/busquedas_laborales/busquedas_laborales.html
@@ -13,6 +13,7 @@
             <div class="busqueda-laboral-title">{{busqueda.titulo}} {{busqueda.fecha}}</div>
             <div class="busqueda-laboral-texto">{{busqueda.detalle}}</div>
             <div class="busqueda-laboral-contacto">{{busqueda.cliente.mail}}</div>
+            <!--<button ng-if="busquedasLaboralesCtrl.user.data.rol == 1" ng-click="busquedasLaboralesCtrl.borrarBusqueda(busqueda);">Eliminar Comentario</button>-->
         </div>
 
     </div>
