--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
 <script src="ac-ripple-button/ac-ripple-button.js"></script>
 <script src="bower_components/ac-angular-noticias/ac-noticias.js"></script>
 <script src="bower_components/ac-angular-slider-manager/slider-manager.js"></script>
+<script src="utils/utils.js"></script>
 <script src="revistas/issuu.js" async="true"></script>
 <script src="app.js"></script>
 <script src="main/main.js"></script>
