--- a/app/nuevo_usuario/nuevo_usuario.html
+++ b/app/nuevo_usuario/nuevo_usuario.html
@@ -1,5 +1,38 @@
-<div ng-controller="NuevoUsuarioController as nuevoUsuarioCtrl" id="nuevoUsuario">
+<div ng-controller="NuevoUsuarioController as nuevoUsuarioCtrl" id="nuevo-usuario">
     <div id="nuevo-usuario-titulo" class="nuevo-usuario-title">
-        <div>HOLA {{nuevoUsuarioCtrl.usuario.nombre}}</div>
+        <div>Nuevo Usuario</div>
     </div>
-    <div id="nuevo-usuario-form">        <div class="nuevo-usuario-sub-title">DETALLE DE TU INFORMACION</div>        <div class="nuevo-usuario-inputs">            <div class="nuevo-usuario-input">                <span>NOMBRE</span>                <input type="text" ng-model="nuevoUsuarioCtrl.usuario.nombre">            </div>            <div class="nuevo-usuario-input">                <span>APELLIDO</span>                <input type="text" ng-model="nuevoUsuarioCtrl.usuario.apellido">            </div>            <div class="nuevo-usuario-input">                <span>CUIT</span>                <input type="text" ng-model="nuevoUsuarioCtrl.usuario.nro_doc">            </div>            <div class="nuevo-usuario-input">                <span>TELEFONO</span>                <input type="text" ng-model="nuevoUsuarioCtrl.usuario.telefono">            </div>            <div class="nuevo-usuario-input">                <span>CONTRASEÑA</span>                <input type="password" ng-model="nuevoUsuarioCtrl.usuario.password">            </div>            <div class="nuevo-usuario-input">                <span>DIRECCION</span>                <input type="text" ng-model="nuevoUsuarioCtrl.usuario.direccion">            </div>            <div class="nuevo-usuario-input">                <span>MAIL</span>                <input type="email" ng-model="nuevoUsuarioCtrl.usuario.mail">            </div>            <div class="nuevo-usuario-input">                <span>ROL</span>                <select ng-model="nuevoUsuarioCtrl.usuario.rol_id">                    <option value="0">Usuario</option>                    <option value="1">Administrador</option>                </select>            </div>        </div>        <div class="nuevo-usuario-button-bar">            <button ng-click="nuevoUsuarioCtrl.saveUsuario();">GUARDAR</button>            <button ng-click="nuevoUsuarioCtrl.usuario = nuevoUsuarioCtrl.logged;">CANCELAR</button>        </div>    </div></div>
+    <div id="nuevo-usuario-form">
+        <div class="nuevo-usuario-sub-title">DETALLE DE TU INFORMACION</div>
+        <div class="nuevo-usuario-inputs">
+            <div class="nuevo-usuario-input"><span>NOMBRE</span>
+                <input type="text" id="nombre" ng-model="nuevoUsuarioCtrl.usuario.nombre">
+            </div>
+            <div class="nuevo-usuario-input"><span>APELLIDO</span>
+                <input type="text" id="apellido" ng-model="nuevoUsuarioCtrl.usuario.apellido">
+            </div>
+            <div class="nuevo-usuario-input"><span>CUIT</span>
+                <input type="text" id="cuit" ng-model="nuevoUsuarioCtrl.usuario.nro_doc"></div>
+            <div class="nuevo-usuario-input"><span>TELEFONO</span>
+                <input type="text" id="telefono" ng-model="nuevoUsuarioCtrl.usuario.telefono">
+            </div>
+            <div class="nuevo-usuario-input"><span>CONTRASEÑA</span>
+                <input type="password" id="password" ng-model="nuevoUsuarioCtrl.usuario.password">
+            </div>
+            <div class="nuevo-usuario-input"><span>DIRECCION</span>
+                <input type="text" id="direccion" ng-model="nuevoUsuarioCtrl.usuario.direccion">
+            </div>
+            <div class="nuevo-usuario-input"><span>MAIL</span>
+                <input type="email" id="email" ng-model="nuevoUsuarioCtrl.usuario.mail"></div>
+            <!--<div class="nuevo-usuario-input">-->
+                <!--<span>ROL</span> <select ng-model="nuevoUsuarioCtrl.usuario.rol_id">-->
+                <!--<option value="0">Usuario</option>-->
+                <!--<option value="1">Administrador</option>-->
+            <!--</select></div>-->
+        </div>
+        <div class="nuevo-usuario-button-bar">
+            <button ng-click="nuevoUsuarioCtrl.saveUsuario();">GUARDAR</button>
+            <button ng-click="">CANCELAR</button>
+        </div>
+    </div>
+</div>
