--- a/app/ingreso/ingreso.html
+++ b/app/ingreso/ingreso.html
@@ -6,11 +6,11 @@
     <div id="ingreso-form">
         <div class="administracion-input">
             <span>NOMBRE DE USUARIO</span>
-            <input type="text" ng-model="ingresoCtrl.mail">
+            <input id="mail" type="email" ng-model="ingresoCtrl.mail">
         </div>
         <div class="administracion-input">
             <span>CONTRASEÑA</span>
-            <input type="password" ng-model="ingresoCtrl.password">
+            <input id="password" type="password" ng-model="ingresoCtrl.password">
         </div>
         <div  class="administracion-button-bar">
             <button ng-click="ingresoCtrl.login();">OK</button>
