--- a/app/ingreso/ingreso.html
+++ b/app/ingreso/ingreso.html
@@ -15,6 +15,7 @@
         <div  class="administracion-button-bar">
             <button ng-click="ingresoCtrl.login();">OK</button>
             <button ng-click="ingresoCtrl.nuevoUsuario();">NUEVO USUARIO</button>
+            <button ng-click="ingresoCtrl.recuperarPassword();">RECUPERAR CONTRASEÑA</button>
         </div>
 
     </div>
