--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,8 @@
 
     <h1>Teléfonos</h1><br>
     <h2>Administración: Tel.: 0221 423 - 4505</h2><br>
-    <h2>Depto. de Desarrollo Productivo: Tel.: 0221 422 - 3916</h2><br>
+    <h2>Depto. de Desarrollo Productivo:</h2>
+     <h2>Tel.: 0221 422 - 3916</h2><br>
 
     <h1>Nuestros correos electrónicos son</h1><br>
     <h2>uiglp@uiglp.org.ar</h2><br>
