--- a/app/revistas/revistas.html
+++ b/app/revistas/revistas.html
@@ -6,7 +6,7 @@
     <div id="revistas-listado">
         <div ng-repeat="link in revistasCtrl.links">
             <div>{{link.nombre}}</div>
-            <iframe
+            <iframe class="issuu"
                     width="300"
                     height="200"
                     ng-src="{{link.link}}" frameborder="0" allowfullscreen></iframe>
