--- a/app/nuevo_usuario/nuevo_usuario.html
+++ b/app/nuevo_usuario/nuevo_usuario.html
@@ -1,6 +1,6 @@
 <div ng-controller="NuevoUsuarioController as nuevoUsuarioCtrl" id="nuevo-usuario">
     <div id="nuevo-usuario-titulo" class="nuevo-usuario-title">
-        <div>Nuevo Usuario</div>
+        <div>Nuevo Usuario:</div>
     </div>
     <div id="nuevo-usuario-form">
         <div class="nuevo-usuario-sub-title">DETALLE DE TU INFORMACION</div>
