--- a/app/index.html
+++ b/app/index.html
@@ -35,8 +35,8 @@
     </div>
     <div class="menu-desktop menu-type-desktop">
 
-        <div id="menu-desktop-logo">
-            <img src="img/logo.png" alt="logo" height="100px" width="100px">
+        <div id="menu-desktop-logo" ng-click="appCtrl.goTo({nombre: 'INICIO', path: '/'});">
+            <img  src="img/logo.png" alt="logo" height="100px" width="100px">
         </div>
         <div id="menu-desktop-right">
             <div id="menu-desktop-upper"></div>
