--- a/app/servicios/servicios.html
+++ b/app/servicios/servicios.html
@@ -18,7 +18,7 @@
                     que tambien ingresó como texto de relleno en documentos
                     electrónicos, quedando esencialmente igual al original. Fue
                     popularizado en los 60s con la creación de las hojas "Letraset".</h2>
-                <button>Volver</button>
+                <button ng-click="appCtrl.goTo({nombre: 'INICIO', path: '/'});">Volver</button>
             </div>
 
         </div>
@@ -37,7 +37,7 @@
                     que tambien ingresó como texto de relleno en documentos
                     electrónicos, quedando esencialmente igual al original. Fue
                     popularizado en los 60s con la creación de las hojas "Letraset".</h2>
-                <button>Volver</button>
+                <button ng-click="appCtrl.goTo({nombre: 'INICIO', path: '/'});">Volver</button>
             </div>
         </div>
     </div>
