--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,12 @@
             <div ng-class="{'nav-button-bot-transformed':appCtrl.menu_mobile_open}"></div>
         </div>
         <div class="header-separator"></div>
-        <div class="logo"></div>
+        <div class="logo">
+
+            <img  src="img/logo.png" alt="logo" height="45px" width="45px">
+
+
+        </div>
     </div>
     <div class="menu-desktop menu-type-desktop">
 
