--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
             <div ng-class="{'nav-button-bot-transformed':appCtrl.menu_mobile_open}"></div>
         </div>
         <div class="header-separator"></div>
+        <div>Bienvenidos</div>
         <div class="logo">
 
             <img  src="img/logo.png" alt="logo" height="45px" width="45px">
