--- a/app/busquedas_laborales/busquedas_laborales.html
+++ b/app/busquedas_laborales/busquedas_laborales.html
@@ -2,7 +2,7 @@
 
     <div id="busquedas-laborales-titulo" class="busquedas-laborales-title">
 
-        <div>Busquedas Laborales</div>
+        <div>Busqueda Laboral</div>
 
     </div>
     <div id="busqueda-laboral-search">
