--- a/app/ingreso/ingreso.html
+++ b/app/ingreso/ingreso.html
@@ -5,11 +5,11 @@
 
     <div id="ingreso-form">
         <div class="administracion-input">
-            <span>NOMBRE DE USUARIO</span>
+            <span>MAIL:</span>
             <input id="mail" type="email" ng-model="ingresoCtrl.mail" ng-keypress="ingresoCtrl.loginPrev($event);">
         </div>
         <div class="administracion-input">
-            <span>CONTRASEÑA</span>
+            <span>CONTRASEÑA:</span>
             <input id="password" type="password" ng-model="ingresoCtrl.password" ng-keypress="ingresoCtrl.loginPrev($event);">
         </div>
         <div  class="administracion-button-bar">
