--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
     <div class="menu-desktop menu-type-desktop">
 
         <div id="menu-desktop-logo" ng-click="appCtrl.goTo({nombre: 'INICIO', path: '/'});">
-            <img  src="img/logo.png" alt="logo" height="100px" width="100px">
+            <img  src="img/logo.png" alt="logo" height="115px" width="115px">
         </div>
         <div id="menu-desktop-right">
             <div id="menu-desktop-upper"></div>
@@ -83,12 +83,12 @@
 
 
 
-    <h1>Teléfonos</h1><br>
+    <h1>Teléfonos:</h1><br>
     <h2>Administración: Tel.: 0221 423 - 4505</h2><br>
     <h2>Depto. de Desarrollo Productivo:</h2>
      <h2>Tel.: 0221 422 - 3916</h2><br>
 
-    <h1>Nuestros correos electrónicos son</h1><br>
+    <h1>Escribanos:</h1><br>
     <h2>uiglp@uiglp.org.ar</h2><br>
     <h2>administracion@uiglp.org.ar</h2><br>
 
