--- a/app/contacto/contacto.html
+++ b/app/contacto/contacto.html
@@ -1,3 +1,5 @@
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
 <div ng-controller="ContactoController as contactoCtrl" id="contacto-inner">
     <div id="contacto-titulo" class="contacto-title">
         <div ng-class="{'contacto-enviado': contactoCtrl.enviado}" class="contacto-titulo-container">
@@ -17,7 +19,7 @@
             <button id="contacto-enviar-desktop" ng-click="contactoCtrl.sendMail();">Enviar</button>
         </div>
         <div class="contacto-panel">
-            Escriba Aqui su consulta:
+            Escriba aqu&iacute su consulta:
             <textarea ng-model="contactoCtrl.mensaje" name="" id="contacto-consulta" rows="10"></textarea>
         </div>
         <div class="contacto-panel">
