--- a/app/index.html
+++ b/app/index.html
@@ -108,9 +108,9 @@
     <div ng-click="appCtrl.goTo({nombre: 'INGRESO', path: '/ingreso'});">INGRESO</div>
 
 </div>
-
+<div class="contenedor_ac">
 <div class="acdesarrollos">Powered by: <A HREF="http://www.ac-desarrollos.com">AC-desarrollos</A></div>
-
+</div>
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
