--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,6 @@
     <title>UIGLP</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href="stylesheets/screen.css">
     <link rel="stylesheet" href="ac-ripple-button/ac-ripple-button.css">
 </head>
@@ -127,19 +125,19 @@
 <script src="bower_components/ac-angular-noticias/ac-noticias.js"></script>
 <script src="bower_components/ac-angular-slider-manager/slider-manager.js"></script>
 <script src="utils/utils.js"></script>
-<script src="revistas/issuu.js" async="true"></script>
-<script src="app.js"></script>
-<script src="main/main.js"></script>
-<script src="ingreso/ingreso.js"></script>
-<script src="administracion/administracion.js"></script>
-<script src="institucional/institucional.js"></script>
-<script src="ofertas_laborales/ofertas_laborales.js"></script>
-<script src="nuevo_usuario/nuevo_usuario.js"></script>
-<script src="noticias/noticias.js"></script>
-<script src="busquedas_laborales/busquedas_laborales.js"></script>
-<script src="servicios/servicios.js"></script>
-<script src="revistas/revistas.js"></script>
-<script src="contacto/contacto.js"></script>
+<script src="revistas/issuu.min.js" async="true"></script>
+<script src="app.min.js"></script>
+<script src="main/main.min.js"></script>
+<script src="ingreso/ingreso.min.js"></script>
+<script src="administracion/administracion.min.js"></script>
+<script src="institucional/institucional.min.js"></script>
+<script src="ofertas_laborales/ofertas_laborales.min.js"></script>
+<script src="nuevo_usuario/nuevo_usuario.min.js"></script>
+<script src="noticias/noticias.min.js"></script>
+<script src="busquedas_laborales/busquedas_laborales.min.js"></script>
+<script src="servicios/servicios.min.js"></script>
+<script src="revistas/revistas.min.js"></script>
+<script src="contacto/contacto.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 </body>
 </html>
