--- a/app/institucional/institucional.html
+++ b/app/institucional/institucional.html
@@ -6,76 +6,220 @@
     <div id="institucional-main-container">
         <div id="institucional-inner-container">
             <div id="institucional-main-primero"
-                 ng-class="{'seccion-primera-selected':institucionalCtrl.seccion == 1,'seccion-deselected':institucionalCtrl.seccion != 1}"></div>
+                 ng-class="{'seccion-primera-selected':institucionalCtrl.seccion == 1,'seccion-deselected':institucionalCtrl.seccion != 1}">
+
+                <h1>NUESTRA INSTITUCION</h1>
+
+                <p>La Unión Industrial del Gran La Plata (UIGLP) fue fundada como cámara gremial empresaria, el 30 de
+                    diciembre de 1997, con el objeto de representar a las industrias radicadas en la jurisdicción de los
+                    partidos de la región - La Plata, Berisso, Ensenada, Magdalena, Brandsen, Punta Indio y Chascomús -
+                    que
+                    carecían de una entidad específicamente representativa de los empresarios industriales.</p>
+
+                <br>
+
+                <h2>La UIGLP tiene como objetivos principales:</h2>
+
+                <div class="lista">
+                    <ul>
+                        <li>Cohesionar la actividad industrial para lograr su más correcta y equilibrada ubicación entre
+                            los
+                            demás
+                            sectores de la comunidad. Velar en su jurisdicción por el desarrollo y progreso de la misma,
+                            promoviendo
+                            la elaboración y aplicación de la política respectiva.
+                        </li>
+                        <li>Colaborar con los poderes públicos y gestionar ante los mismos la adopción de medidas
+                            tendientes
+                            al
+                            desenvolvimiento de la actividad representada.
+                        </li>
+                        <li>Fomentar el constante desarrollo e innovación tecnológica, y la creación de nuevas fuentes
+                            de
+                            trabajo.
+                        </li>
+                        <li>Ser interlocutor entre las autoridades nacionales, provinciales y municipales.</li>
+                        <li>Promover la concreción de los intereses de sus asociados ejerciendo su representación.</li>
+                        <li>Desarrollar una labor social, cultural y educativa que le permita insertarse en la vida
+                            comunitaria,
+                            impulsando cursos, congresos, talleres, seminarios, conferencias, etc.
+                        </li>
+                    </ul>
+                </div>
+                <br>
+
+                <p>La UIGLP cuenta con doce departamentos de trabajo que son los encargados de analizar técnicamente
+                    toda
+                    propuesta, proyecto o reclamo que efectúe la Institución.</p>
+                <br>
+
+                <p>La UIGLP representa a los industriales de la región ante múltiples organismos oficiales y mantiene
+                    vinculación con numerosas entidades nacionales y extranjeras mediante convenios que precisan los
+                    recíprocos compromisos.</p>
+                <br>
+
+                <p>Asimismo, tiene activa participación en la Unión Industrial Argentina y en la Unión Industrial de la
+                    Provincia de Argentina, desempeñando importantes cargos en sus órganos directivos y técnicos.</p>
+                <br>
+
+                <p>Actualmente, la UIGLP, cuenta con ochenta empresas asociadas, de diversos rubros, como por ejemplo:
+                    metalúrgicas, siderúrgicas, alimenticias, textiles, frigoríficos, cerámicas, transportes y grúas,
+                    papeleras, saneamiento ambiental e higiene urbana, constructoras, mantenimiento, montaje y limpieza
+                    industrial, obras de ingeniería civil, astilleros, petroquímicas, refinerías, curtiembres,
+                    mecánicas,
+                    madereras, cooperativas.</p>
+
+            </div>
             <div id="institucional-main-segundo"
                  ng-class="{'seccion-segunda-selected':institucionalCtrl.seccion == 2,'seccion-deselected':institucionalCtrl.seccion != 2}">
-                <div class="content-org">
-                    <h1>Responsive Organization Chart</h1>
-                    <figure class="org-chart cf">
-                        <ul class="administration">
-                            <li>
-                                <ul class="director">
-                                    <li>
-                                        <a href="#"><span>Director</span></a>
-                                        <ul class="subdirector">
-                                            <li><a href="#"><span>Assistante Director</span></a></li>
-                                        </ul>
-                                        <ul class="departments cf">
-                                            <li><a href="#"><span>Administration</span></a></li>
 
-                                            <li class="department dep-a">
-                                                <a href="#"><span>Department A</span></a>
-                                                <ul class="sections">
-                                                    <li class="section"><a href="#"><span>Section A1</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section A2</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section A3</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section A4</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section A5</span></a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="department dep-b">
-                                                <a href="#"><span>Department B</span></a>
-                                                <ul class="sections">
-                                                    <li class="section"><a href="#"><span>Section B1</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section B2</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section B3</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section B4</span></a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="department dep-c">
-                                                <a href="#"><span>Department C</span></a>
-                                                <ul class="sections">
-                                                    <li class="section"><a href="#"><span>Section C1</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section C2</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section C3</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section C4</span></a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="department dep-d">
-                                                <a href="#"><span>Department D</span></a>
-                                                <ul class="sections">
-                                                    <li class="section"><a href="#"><span>Section D1</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section D2</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section D3</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section D4</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section D5</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section D6</span></a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="department dep-e">
-                                                <a href="#"><span>Department E</span></a>
-                                                <ul class="sections">
-                                                    <li class="section"><a href="#"><span>Section E1</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section E2</span></a></li>
-                                                    <li class="section"><a href="#"><span>Section E3</span></a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </figure>
+                <div class="intitucional-organigrama-container">
+                    <div class="organigrama-line">
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Presidente</h1>
+                            <p>Ing.	Francisco 	Gliemmo</p>
+                            <p>Gasol Platense S.A.</p>
+                        </div>
+                    </div>
+
+                    <div class="organigrama-line">
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vicepresidente 1°</h1>
+                            <p>Ing. Alejandro Orte</p>
+                            <p>Hidrocinetic S.A.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vicepresidente 2°</h1>
+                            <p>Lic. Marcelo Jaworski</p>
+                            <p>Copetro S.C.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vicepresidente 3°</h1>
+                            <p>Ing. Hugo Timossi</p>
+                            <p>Inoxpla S.R.L.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vicepresidente 4°</h1>
+                            <p>Ing. Jorge Dalla Salda</p>
+                            <p>Austral S.R.L.</p>
+                        </div>
+                    </div>
+
+                    <div class="organigrama-line">
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Secretario Lic.</h1>
+                            <p>Daniel  Galeazzi</p>
+                            <p>Procamet S.A.</p>
+                        </div>
+                    </div>
+
+
+                    <div class="organigrama-line">
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Prosecretario</h1>
+                            <p>Sr. Claudio Moretto</p>
+                            <p>Cerámica Fanelli S.A.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Prosecretario 1°</h1>
+                            <p>Ing. Rodolfo Sanz</p>
+                            <p>Siderar S.A.</p>
+                        </div>
+                    </div>
+
+                    <div class="organigrama-line">
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Tesorero</h1>
+                            <p>Sr. Mario Cardone</p>
+                            <p>MTI S.R.L.</p>
+                        </div>
+                    </div>
+
+
+                    <div class="organigrama-line">
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Protesorero</h1>
+                            <p>Ing. Luis Galdamez</p>
+                            <p>Galtec S.A.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Protesorero 1°</h1>
+                            <p>Sr. Carlos Hernández</p>
+                            <p>Campodónico S.A. Miguel Campodónico Ltda.</p>
+                        </div>
+                    </div>
+
+                    <div class="organigrama-line">
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vocal</h1>
+                            <p>Ing. Gustavo Agüero</p>
+                            <p>La Plata Cogeneración S.A.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vocal</h1>
+                            <p>Ing. Horacio Pennacchiotti</p>
+                            <p>Tecplata S.A.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vocal</h1>
+                            <p>Sr. Leandro Pompillo</p>
+                            <p>Consorcio Parque Industrial La Plata</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vocal</h1>
+                            <p>Ing. Jorge Gonzalez Ponce</p>
+                            <p>Tecoil S.A.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vocal</h1>
+                            <p>Cr. Juan Pablo Justo</p>
+                            <p>Buenos Aires Zona Franca S.A.</p>
+                        </div>
+                    </div>
+
+                    <div class="organigrama-line">
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vocal Suplente</h1>
+                            <p>Sr. Luis Manuel Alvarez</p>
+                            <p>LMA Servicios Industriales S.A.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vocal Suplente</h1>
+                            <p>Ing. Alejandro Prades</p>
+                            <p>Centro de Estudios de Infraestructura S.A.</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vocal Suplente</h1>
+                            <p>Sr. Rubén Falcón</p>
+                            <p>Aremet</p>
+                        </div>
+                        <div class="organigrama-box">
+                            <img class="organigrama-box-foto" src="">
+                            <h1>Vocal Suplente</h1>
+                            <p>Sr. Roberto Puricelli</p>
+                            <p>Tomercan S.A.</p>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
