--- a/app/institucional/institucional.html
+++ b/app/institucional/institucional.html
@@ -228,17 +228,24 @@
 
                 <div class="acordeon-list">
                     <div class="acordeon-line">
-
                         <div class="acordeon-block">
-                            <input id="ac" type="checkbox" class="acordeon-title-check">
-                            <label for="ac"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <input id="ac1" type="checkbox" class="acordeon-title-check">
+                            <label for="ac1"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
                             <p  class="acordeon-text">
                                 Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
                                 Entender en todo lo relativo a Comercio Exterior e Interior.
                             </p>
                         </div>
-
-
+                    </div>
+                    <div class="acordeon-line">
+                        <div class="acordeon-block">
+                            <input id="ac2" type="checkbox" class="acordeon-title-check">
+                            <label for="ac2"  class="acordeon-title-label">COMERCIO EXTERIOR</label>
+                            <p  class="acordeon-text">
+                                Analiza y genera políticas industriales relacionadas a: comercio interior, exportaciones, importaciones, transportes y servicios, prácticas desleales de comercio exterior y aduana, estudios de mercado, imagen corporativa, diseño de productos, packaging, misiones comerciales ferias y exposiciones.
+                                Entender en todo lo relativo a Comercio Exterior e Interior.
+                            </p>
+                        </div>
                     </div>
                 </div>
 
